--- a/fhir/src/main/resources/application.properties
+++ b/fhir/src/main/resources/application.properties
@@ -17,14 +17,30 @@
 
 quarkus.banner.enabled = false
 
-serverUrl=http://localhost:8081/fhir
+# Camel FHIR configuration
+fhir.http.server.host = ${FHIR_SERVER_SERVICE_HOST:localhost}
+fhir.http.server.port = ${FHIR_SERVER_SERVICE_PORT:8080}
+camel.component.fhir.server-url=http://${fhir.http.server.host}:${fhir.http.server.port}/fhir
+camel.component.fhir.fhir-version=R4
 
-fhirVersion=R4
+# Kubernetes configuration
+# Uncomment to trust self signed certificates if they are presented by the Kubernetes API server
+#quarkus.kubernetes-client.trust-certs=true
+quarkus.kubernetes.image-pull-policy=IfNotPresent
+quarkus.kubernetes.ingress.expose=true
 
-input=target/work/fhir/input
+# Uncomment to set resource limits
+#quarkus.kubernetes.resources.requests.memory=64Mi
+#quarkus.kubernetes.resources.requests.cpu=250m
+#quarkus.kubernetes.resources.limits.memory=512Mi
+#quarkus.kubernetes.resources.limits.cpu=1000m
 
-camel.quakus.name = MyCamel
+# OpenShift configuration
+quarkus.openshift.image-pull-policy=IfNotPresent
+quarkus.openshift.route.expose=true
 
-#quarkus.log.category."org.apache.camel".level=DEBUG
-
-
+# Uncomment to set resource limits
+#quarkus.openshift.resources.requests.memory=64Mi
+#quarkus.openshift.resources.requests.cpu=250m
+#quarkus.openshift.resources.limits.memory=512Mi
+#quarkus.openshift.resources.limits.cpu=1000m
