--- a/cluster-leader-election/pom.xml
+++ b/cluster-leader-election/pom.xml
@@ -316,6 +316,10 @@
                 </dependency>
                 <dependency>
                     <groupId>org.apache.camel.quarkus</groupId>
+                    <artifactId>camel-quarkus-kubernetes-cluster-service</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.camel.quarkus</groupId>
                     <artifactId>camel-quarkus-microprofile-health</artifactId>
                 </dependency>
             </dependencies>
@@ -335,6 +339,10 @@
                 <dependency>
                     <groupId>io.quarkus</groupId>
                     <artifactId>quarkus-kubernetes-client</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.camel.quarkus</groupId>
+                    <artifactId>camel-quarkus-kubernetes-cluster-service</artifactId>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.camel.quarkus</groupId>
