Use build time generated FhirContext in FHIR example

--- a/fhir/src/main/resources/application.properties
+++ b/fhir/src/main/resources/application.properties
@@ -22,6 +22,7 @@ fhir.http.server.host = ${FHIR_SERVER_SERVICE_HOST:localhost}
 fhir.http.server.port = ${FHIR_SERVER_SERVICE_PORT:8080}
 camel.component.fhir.server-url=http://${fhir.http.server.host}:${fhir.http.server.port}/fhir
 camel.component.fhir.fhir-version=R4
+camel.component.fhir.fhir-context=#R4
 
 # Kubernetes configuration
 # Uncomment to trust self signed certificates if they are presented by the Kubernetes API server
