--- a/data-extract-langchain4j/src/main/resources/application.properties
+++ b/data-extract-langchain4j/src/main/resources/application.properties
@@ -20,7 +20,7 @@ quarkus.banner.enabled = false
 # Configure Quarkus LangChain4j that handle interactions with the Large Language Model
 quarkus.langchain4j.ollama.base-url = http://localhost:11434
 quarkus.langchain4j.ollama.timeout = 3m
-quarkus.langchain4j.ollama.chat-model.model-id = codellama
+quarkus.langchain4j.ollama.chat-model.model-id = granite3-dense
 quarkus.langchain4j.ollama.chat-model.format = json
 quarkus.langchain4j.ollama.chat-model.temperature = 0
 # Uncomment lines below to log Ollama client requests and responses
