--- a/artemis-elasticsearch/pom.xml
+++ b/artemis-elasticsearch/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-artemis-elasticsearch</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>3.16.0-SNAPSHOT</version>
+    <version>3.16.0</version>
 
     <name>Camel Quarkus :: Examples :: Artemis ElasticSearch</name>
     <description>Camel Quarkus Example :: Artemis ElasticSearch</description>
