--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-kafka</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>3.16.0-SNAPSHOT</version>
+    <version>3.16.0</version>
 
     <name>Camel Quarkus :: Examples :: Kafka</name>
     <description>Camel Quarkus Example :: Kafka</description>
