--- a/openapi-contract-first/pom.xml
+++ b/openapi-contract-first/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-examples-openapi-contract-first</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>3.16.0-SNAPSHOT</version>
+    <version>3.16.0</version>
 
     <name>Camel Quarkus :: Examples :: openapi-contract-first</name>
     <description>Camel Quarkus Example :: openapi-contract-first</description>
