--- a/saga/saga-flight-service/pom.xml
+++ b/saga/saga-flight-service/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>camel-quarkus-examples-saga</artifactId>
         <groupId>org.apache.camel.quarkus.examples</groupId>
-        <version>3.17.0</version>
+        <version>3.18.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-quarkus-example-saga-flight</artifactId>
