--- a/fhir/src/main/kubernetes/kubernetes.yml
+++ b/fhir/src/main/kubernetes/kubernetes.yml
@@ -45,7 +45,7 @@ spec:
               mountPath: /app/target
       containers:
         - name: fhir-server
-          image: docker.io/hapiproject/hapi:v7.4.0
+          image: mirror.gcr.io/hapiproject/hapi:v7.4.0
           ports:
             - containerPort: 8080
               name: http
