Fix usage of deprecated locale configuration properties

--- a/data-extract-langchain4j/src/main/resources/application.properties
+++ b/data-extract-langchain4j/src/main/resources/application.properties
@@ -35,5 +35,4 @@ quarkus.langchain4j.ollama.chat-model.temperature = 0
 # Configure Quarkus LangChain4j to keep a single message in memory, forgetting about previous data extractions
 quarkus.langchain4j.chat-memory.memory-window.max-messages = 1
 
-quarkus.native.user-country=US
-quarkus.native.user-language=en
+quarkus.default-locale=en_US
