Upgrade quarkus-langchain4j to 0.23.3

--- a/data-extract-langchain4j/src/main/resources/application.properties
+++ b/data-extract-langchain4j/src/main/resources/application.properties
@@ -15,6 +15,7 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
+quarkus.devservices.enabled=false
 quarkus.banner.enabled = false
 
 # Configure Quarkus LangChain4j that handle interactions with the Large Language Model
