--- a/saga/saga-train-service/pom.xml
+++ b/saga/saga-train-service/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>camel-quarkus-examples-saga</artifactId>
         <groupId>org.apache.camel.quarkus.examples</groupId>
-        <version>3.19.0-SNAPSHOT</version>
+        <version>3.19.0</version>
     </parent>
 
     <artifactId>camel-quarkus-example-saga-train</artifactId>
