Add Jolokia extension to observability example project

--- a/observability/pom.xml
+++ b/observability/pom.xml
@@ -95,6 +95,10 @@
             <artifactId>camel-quarkus-observability-services</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-jolokia</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy</artifactId>
         </dependency>
