--- a/observability/src/main/resources/application.properties
+++ b/observability/src/main/resources/application.properties
@@ -41,3 +41,6 @@ greeting-app.service.port = ${CAMEL_QUARKUS_OBSERVABILITY_SERVICE_PORT_HTTP:${qu
 greeting-provider-app.service.host = localhost
 greeting-provider-app.service.port = ${quarkus.http.port}
 %test.greeting-provider-app.service.port = ${quarkus.http.test-port}
+
+# Optional hawtio-online support
+quarkus.camel.jolokia.kubernetes.client-principal=cn=hawtio-online.hawtio.svc
