Refresh project Dockerfiles with those generated from code.quarkus.io

--- a/aws-lambda/src/main/docker/Dockerfile.legacy-jar
+++ b/aws-lambda/src/main/docker/Dockerfile.legacy-jar
@@ -19,15 +19,15 @@
 #
 # Before building the container image run:
 #
-# mvn package
+# mvn package -Dquarkus.package.jar.type=legacy-jar
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.jvm -t quarkus/kafka-jvm .
+# docker build -f src/main/docker/Dockerfile.legacy-jar -t quarkus/aws-lambda-legacy-jar .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/kafka-jvm
+# docker run -i --rm -p 8080:8080 quarkus/aws-lambda-legacy-jar
 #
 # If you want to include the debug port into your docker image
 # you will have to expose the debug port (default 5005 being the default) like this :  EXPOSE 8080 5005.
@@ -36,7 +36,7 @@
 #
 # Then run the container using :
 #
-# docker run -i --rm -p 8080:8080 quarkus/kafka-jvm
+# docker run -i --rm -p 8080:8080 quarkus/aws-lambda-legacy-jar
 #
 # This image uses the `run-java.sh` script to run the application.
 # This scripts computes the command line to execute your Java application, and
@@ -99,11 +99,8 @@ FROM registry.access.redhat.com/ubi9/openjdk-21:1.21
 ENV LANGUAGE='en_US:en'
 
 
-# We make four distinct layers so if there are application changes the library layers can be re-used
-COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
-COPY --chown=185 target/quarkus-app/*.jar /deployments/
-COPY --chown=185 target/quarkus-app/app/ /deployments/app/
-COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
+COPY target/lib/* /deployments/lib/
+COPY target/*-runner.jar /deployments/quarkus-run.jar
 
 EXPOSE 8080
 USER 185
@@ -111,4 +108,3 @@ ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=or
 ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
 
 ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
-
