--- a/aws-lambda/src/main/docker/Dockerfile.native
+++ b/aws-lambda/src/main/docker/Dockerfile.native
@@ -14,31 +14,32 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-
 ####
-# This Dockerfile is used in order to build a container that runs the Quarkus application in native (no JVM) mode
+# This Dockerfile is used in order to build a container that runs the Quarkus application in native (no JVM) mode.
 #
 # Before building the container image run:
 #
-# mvn package -Pnative
+# mvn package -Dnative
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t camel-quarkus-examples/aws-lambda .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/aws-lambda .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 camel-quarkus-examples/aws-lambda
+# docker run -i --rm -p 8080:8080 quarkus/aws-lambda
 #
+# The ` registry.access.redhat.com/ubi9/ubi-minimal:9.5` base image is based on UBI 9.
+# To use UBI 8, switch to `quay.io/ubi8/ubi-minimal:8.10`.
 ###
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.4
+FROM registry.access.redhat.com/ubi9/ubi-minimal:9.5
 WORKDIR /work/
 RUN chown 1001 /work \
     && chmod "g+rwX" /work \
     && chown 1001:root /work
-COPY --chown=1001:root target/*-runner /work/application
+COPY --chown=1001:root --chmod=0755 target/*-runner /work/application
 
 EXPOSE 8080
 USER 1001
 
-CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
+ENTRYPOINT ["./application", "-Dquarkus.http.host=0.0.0.0"]
