--- a/aws-lambda/src/main/docker/Dockerfile.native-micro
+++ b/aws-lambda/src/main/docker/Dockerfile.native-micro
@@ -26,11 +26,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/fhir .
+# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/aws-lambda .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/fhir
+# docker run -i --rm -p 8080:8080 quarkus/aws-lambda
 #
 # The `quay.io/quarkus/ubi9-quarkus-micro-image:2.0` base image is based on UBI 9.
 # To use UBI 8, switch to `quay.io/quarkus/quarkus-micro-image:2.0`.
