--- a/kafka/src/main/docker/Dockerfile.native-micro
+++ b/kafka/src/main/docker/Dockerfile.native-micro
@@ -14,27 +14,35 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-
 ####
-# This Dockerfile is used in order to build a distroless container that runs the Quarkus application in native (no JVM) mode
+# This Dockerfile is used in order to build a container that runs the Quarkus application in native (no JVM) mode.
+# It uses a micro base image, tuned for Quarkus native executables.
+# It reduces the size of the resulting container image.
+# Check https://quarkus.io/guides/quarkus-runtime-base-image for further information about this image.
 #
 # Before building the container image run:
 #
-# mvn package -Pnative
+# mvn package -Dnative
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-distroless -t camel-quarkus-examples/aws-lambda .
+# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/kafka .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 camel-quarkus-examples/aws-lambda
+# docker run -i --rm -p 8080:8080 quarkus/kafka
 #
+# The `quay.io/quarkus/ubi9-quarkus-micro-image:2.0` base image is based on UBI 9.
+# To use UBI 8, switch to `quay.io/quarkus/quarkus-micro-image:2.0`.
 ###
-FROM quay.io/quarkus/quarkus-distroless-image:1.0
-COPY target/*-runner /application
+FROM quay.io/quarkus/ubi9-quarkus-micro-image:2.0
+WORKDIR /work/
+RUN chown 1001 /work \
+    && chmod "g+rwX" /work \
+    && chown 1001:root /work
+COPY --chown=1001:root --chmod=0755 target/*-runner /work/application
 
 EXPOSE 8080
-USER nonroot
+USER 1001
 
-CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
+ENTRYPOINT ["./application", "-Dquarkus.http.host=0.0.0.0"]
