--- a/jms-jpa/pom.xml
+++ b/jms-jpa/pom.xml
@@ -25,7 +25,7 @@
     <name>Camel Quarkus :: Examples :: JMS JPA</name>
     <description>Camel Quarkus Example :: JMS JPA</description>
     <properties>
-        <quarkus.platform.version>3.19.2</quarkus.platform.version>
+        <quarkus.platform.version>3.20.0.CR1</quarkus.platform.version>
         <camel-quarkus.platform.version>3.20.0-SNAPSHOT</camel-quarkus.platform.version>
         <quarkiverse-artemis.version>3.7.0</quarkiverse-artemis.version>
 
