Convert timer-log example to use YAML instead of XML DSL

--- a/timer-log/pom.xml
+++ b/timer-log/pom.xml
@@ -90,10 +90,10 @@
             <artifactId>camel-quarkus-timer</artifactId>
         </dependency>
 
-        <!-- To demonstrate an XML route -->
+        <!-- To demonstrate a YAML route -->
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-xml-io-dsl</artifactId>
+            <artifactId>camel-quarkus-yaml-dsl</artifactId>
         </dependency>
 
         <!-- Test -->
