--- a/observability/src/main/resources/application.properties
+++ b/observability/src/main/resources/application.properties
@@ -30,6 +30,8 @@ quarkus.application.name = camel-quarkus-observability
 # For OTLP
 quarkus.otel.exporter.otlp.traces.endpoint = http://${TELEMETRY_COLLECTOR_COLLECTOR_SERVICE_HOST:localhost}:4317
 quarkus.otel.exporter.otlp.traces.timeout = 30s
+# To enable tracing (it is disabled by default via camel-quarkus-observability-services)
+quarkus.otel.sdk.disabled=false
 
 #
 # Camel
