feat(observability-services): use management port

--- a/observability/src/main/resources/application.properties
+++ b/observability/src/main/resources/application.properties
@@ -20,6 +20,7 @@
 #
 quarkus.banner.enabled = false
 quarkus.management.enabled = true
+quarkus.management.port=9876
 
 # Identifier for the origin of spans created by the application
 quarkus.application.name = camel-quarkus-observability
