--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -22,7 +22,7 @@ quarkus.kafka.devservices.provider = strimzi
 kafka.topic.name=test
 
 # Kafka brokers in native test
-%prod.camel.component.kafka.brokers=${kafka.bootstrap.servers}
+%test,prod.camel.component.kafka.brokers=${kafka.bootstrap.servers}
 
 # How often should the messages be generated and pushed to Kafka Topic
 timer.period = 10000
