Disable Quarkus Kubernetes dev services

--- a/cluster-leader-election/src/main/resources/application.properties
+++ b/cluster-leader-election/src/main/resources/application.properties
@@ -20,6 +20,9 @@
 quarkus.banner.enabled = false
 quarkus.log.file.enable = true
 
+# No need for k8s dev services in this project
+quarkus.kubernetes-client.devservices.enabled = false
+
 #
 # Quarkus - Camel
 #
