--- a/fhir/src/main/resources/application.properties
+++ b/fhir/src/main/resources/application.properties
@@ -17,6 +17,9 @@
 
 quarkus.banner.enabled = false
 
+# No need for k8s dev services in this project
+quarkus.kubernetes-client.devservices.enabled = false
+
 # Camel FHIR configuration
 fhir.http.server.host = ${FHIR_SERVER_SERVICE_HOST:localhost}
 fhir.http.server.port = ${FHIR_SERVER_SERVICE_PORT:8080}
