--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -15,6 +15,9 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
+# No need for k8s dev services in this project
+quarkus.kubernetes-client.devservices.enabled = false
+
 # Use Strimzi as it's power architecture compatible
 quarkus.kafka.devservices.provider = strimzi
 
