--- a/file-bindy-ftp/src/main/resources/application.properties
+++ b/file-bindy-ftp/src/main/resources/application.properties
@@ -17,6 +17,9 @@
 
 quarkus.banner.enabled = false
 
+# No need for k8s dev services in this project
+quarkus.kubernetes-client.devservices.enabled = false
+
 # Uncomment if your application image is to be pushed to an external registry
 #quarkus.container-image.registry=my.docker-registry.net
 
