--- a/saga/saga-app/pom.xml
+++ b/saga/saga-app/pom.xml
@@ -35,7 +35,7 @@
     <properties>
         <quarkus.platform.group-id>com.redhat.quarkus.platform</quarkus.platform.group-id>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
-        <quarkus.platform.version>3.20.0.temporary-redhat-00003</quarkus.platform.version>
+        <quarkus.platform.version>3.20.0.SP1-redhat-00001</quarkus.platform.version>
         <camel-quarkus.platform.group-id>${quarkus.platform.group-id}</camel-quarkus.platform.group-id>
         <camel-quarkus.platform.artifact-id>quarkus-camel-bom</camel-quarkus.platform.artifact-id>
         <camel-quarkus.platform.version>${quarkus.platform.version}</camel-quarkus.platform.version>
