--- a/data-extract-langchain4j/src/main/resources/application.properties
+++ b/data-extract-langchain4j/src/main/resources/application.properties
@@ -14,25 +14,10 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-
-quarkus.devservices.enabled=false
 quarkus.banner.enabled = false
-
-# Configure Quarkus LangChain4j that handle interactions with the Large Language Model
-quarkus.langchain4j.ollama.base-url = http://localhost:11434
-quarkus.langchain4j.ollama.timeout = 3m
-quarkus.langchain4j.ollama.chat-model.model-id = granite3.3:2b
-quarkus.langchain4j.ollama.chat-model.temperature = 0
-# Uncomment lines below to log Ollama client requests and responses
-#quarkus.langchain4j.ollama.log-requests=true
-#quarkus.langchain4j.ollama.log-responses=true
-
-# Or uncomment lines below to log HTTP traffic between LangChain4j & the LLM API
-#quarkus.rest-client.logging.scope=request-response
-#quarkus.rest-client.logging.body-limit=10000
-#quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
-
-# Configure Quarkus LangChain4j to keep a single message in memory, forgetting about previous data extractions
-quarkus.langchain4j.chat-memory.memory-window.max-messages = 1
-
 quarkus.default-locale=en_US
+
+# Adjust as per your where your Ollama instance is running
+langchain4j.ollama.base-url=http://localhost:11434
+# The chat model to use
+langchain4j.ollama.chat-model.model-id=granite3.3:2b
