Force Dependabot to get dependency metadata only from Maven Central

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,11 @@
 
 version: 2
 
+registries:
+  maven-central:
+    type: maven-repository
+    url: https://repo.maven.apache.org/maven2
+
 updates:
   - package-ecosystem: "github-actions"
     target-branch: "camel-quarkus-main"
