Add Maven Central to Dependabot maven package ecosystem

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -39,6 +39,8 @@ updates:
       - "**/*"
     schedule:
       interval: "daily"
+    registries:
+      - maven-central
     allow:
       # Quarkiverse extensions
       - dependency-name: "io.quarkiverse.*:*"
