--- a/amqp/pom.xml
+++ b/amqp/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-amqp</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>3.27.0-SNAPSHOT</version>
+    <version>3.27.0</version>
 
     <name>Camel Quarkus :: Examples :: AMQP</name>
     <description>Camel Quarkus Example :: AMQP</description>
